RESOLVED FIXED300665
AX: Pressing VO-Space does not open the date picker for date inputs
https://bugs.webkit.org/show_bug.cgi?id=300665
Summary AX: Pressing VO-Space does not open the date picker for date inputs
Tyler Wilcock
Reported 2025-10-13 16:47:19 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-13 16:47:25 PDT
Tyler Wilcock
Comment 2 2025-10-13 16:51:52 PDT
EWS
Comment 3 2025-10-14 21:41:20 PDT
Committed 301528@main (346e54f156c6): <https://commits.webkit.org/301528@main> Reviewed commits have been landed. Closing PR #52268 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.