AX: Pressing VO-Space does not open the date picker for date inputs https://bugs.webkit.org/show_bug.cgi?id=300665 rdar://162562248

Reviewed by Joshua Hoffman.

We need to consider date inputs to be an AccessibilityNodeObject::actionElement(), and ensure that accessibility
activations set the BaseDateAndTimeInputType::m_pickerWasActivatedByKeyboard flag so that focus moves into the picker.

Test: fast/forms/datetimelocal/datetimelocal-editable-components/accessibility-opens-picker.html

* LayoutTests/fast/forms/datetimelocal/datetimelocal-editable-components/accessibility-opens-picker-expected.txt: Added.
* LayoutTests/fast/forms/datetimelocal/datetimelocal-editable-components/accessibility-opens-picker.html: Added.
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::nodeActionElement):
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::press):
* Source/WebCore/en.lproj/Localizable.strings:
* Source/WebCore/html/BaseDateAndTimeInputType.cpp:
(WebCore::BaseDateAndTimeInputType::handleAccessibilityActivation):
* Source/WebCore/html/BaseDateAndTimeInputType.h:
* Source/WebCore/html/InputType.h:
(WebCore::InputType::handleAccessibilityActivation):
* Source/WebKit/UIProcess/mac/WebDateTimePickerMac.mm:
(-[WKDateTimePicker initWithParams:inView:]):

Canonical link: https://commits.webkit.org/301528@main